Fixing issue with IOS devices blurrying images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,11 @@ body {
 	color: rgb(0, 0, 0, 1);
 }
 
+html, body{
+	width: 100%;
+	height: 100%;
+}
+
 .background {
 
 /*alt tag for image???*/
@@ -17,6 +22,12 @@ body {
     background-size: cover;
     overflow: hidden;
 }
+
+#wrapper{
+		width: 100%;
+		height: 100%;
+		overflow: scroll;
+	}
 
 .container {
     padding-right: 0.5rem;
